jipsy-tests/src/test/resources/invalid/NoImplementationTestClass.java
import java.util.RandomAccess;

import org.kordamp.jipsy.ServiceProviderFor;

@ServiceProviderFor(RandomAccess.class)
public class NoImplementationTestClass {
}
